test: 💍 User registerd and login functionality done
User registerd and login functionality done

BREAKING CHANGE: 🧨 0

✅ Closes: 1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice_mongoose_tt",
+  "name": "nur-it_blog",
   "version": "1.0.1",
   "description": "This is a practice session of my code about mongoose with mongodb backend",
   "main": "app.js",
@@ -24,6 +24,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
